# cmdpanel

./: .gitignore  LICENSE  README.md  lstest.py  pyproject.toml  setup.sh  uninstall.sh
cmdpanel/: __init__.py  __main__.py  app.py  autostart.py  command_row.py  daemon.py  dialog_command.py  dialog_settings.py  output_panel.py  runner.py  store.py  style.py  window.py
data/: io.github.cmdpanel.Daemon.service  io.github.cmdpanel.desktop
extension/cmdpanel@cmdpanel.github.io/: dbus.js  extension.js  metadata.json  widget.js
