[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdpanel"
version = "0.1.0"
description = "Minimal desktop command widget for GNOME/Wayland"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# PyGObject is a system package on Fedora — not listed here.
# Install it via: sudo dnf install python3-gobject gtk4 libadwaita
dependencies = []

[project.scripts]
cmdpanel = "cmdpanel.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmdpanel*"]
